--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     <div id="header"></div>
     <div id="products"></div>
     <div id="shopping"></div>
+    <div id="preloader"></div>
+    <div id="error"></div>
 
-    <script src="./constants/catalog.js"></script>
+    <!-- <script src="./constants/catalog.js"></script> -->
     <script src="./constants/root.js"></script>
     <script src="./utils/localStorageUtil.js"></script>
 
@@ -35,6 +37,12 @@
 
     <script src="./components/Shopping/shopping.js"></script>
     <link rel="stylesheet" href="./components/Shopping/shopping.css">
+
+    <script src="./components/Preloader/preloader.js"></script>
+    <link rel="stylesheet" href="./components/Preloader/preloader.css">
+
+    <script src="./components/Error/error.js"></script>
+    <link rel="stylesheet" href="./components/Error/error.css">
 
     <script src="index.js"></script>
 </body>
